fix bugs partly...

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
                 <input type="text" id="goal_content" name="goal_content"></input><br>
                 <label for="status">Status</label>
                 <input type="text" id="status" name="status">Working</input><br>
-                <button type="submit">Register</button>
+                <input type="submit" value="Register">
 	        </form>
         </p>
         <h2>Action Goals Table</h2>
